--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#" target="_blank">Mohamed Salmi</a>.
+      >. Coded by <a href="https://github.com/Salmi27" target="_blank">Mohamed Salmi</a>.
     </div>
   </body>
 </html>
